--- a/ChestBrowser.csproj
+++ b/ChestBrowser.csproj
@@ -35,21 +35,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ChestBrowser.cs" />
+    <Compile Include="ChestBrowserPlayer.cs" />
+    <Compile Include="ChestBrowserTool.cs" />
+    <Compile Include="ChestBrowserUI.cs" />
+    <Compile Include="ChestBrowserUtils.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="ChestBrowserPlayer.cs" />
-    <Compile Include="ChestBrowserUtils.cs" />
-    <Compile Include="ChestBrowserTool.cs" />
-    <Compile Include="ChestBrowserUI.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Tool.cs" />
+    <Compile Include="UIElements\UIChestSlot.cs" />
     <Compile Include="UIElements\UIDragablePanel.cs" />
     <Compile Include="UIElements\UIGrid.cs" />
     <Compile Include="UIElements\UIHoverImageButton.cs" />
+    <Compile Include="UIElements\UIImageListButton.cs" />
     <Compile Include="UIElements\UIItemSlot.cs" />
     <Compile Include="UIElements\UIModState.cs" />
-    <Compile Include="UIElements\UIChestSlot.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -69,22 +72,26 @@
       <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework.Xact\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.Xact.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\..\tModLoader\src\tModLoader\Terraria.Libraries\JSON.NET\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\tModLoader\src\tModLoader\Terraria.Libraries\JSON.NET\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="ReLogic">
-      <HintPath>..\..\..\..\tModLoader\src\tModLoader\Terraria.Libraries\ReLogic\ReLogic.dll</HintPath>
+      <HintPath>..\..\..\tModLoader\src\tModLoader\Terraria.Libraries\ReLogic\ReLogic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="build.txt" />
     <Content Include="description.txt" />
+    <Content Include="icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\tModLoader\src\tModLoader\Terraria.csproj">
+    <ProjectReference Include="..\..\..\\tModLoader\src\tModLoader\Terraria.csproj">
       <Project>{3996d5fa-6e59-4fe4-9f2b-40eeef9645d5}</Project>
       <Name>Terraria</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
