--- a/ChestBrowser.csproj
+++ b/ChestBrowser.csproj
@@ -38,16 +38,10 @@
     <Compile Include="ChestBrowserPlayer.cs" />
     <Compile Include="ChestBrowserTool.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="FilterItemTypeUI.cs" />
     <Compile Include="ChestBrowserUI.cs" />
     <Compile Include="ChestBrowserUtils.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="obj\Release\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Tool.cs" />
+    <Compile Include="UIElements\UIFilterItemSlot.cs" />
     <Compile Include="UIElements\UIFilterChestSlot.cs" />
     <Compile Include="UIElements\UIChestSlot.cs" />
     <Compile Include="UIElements\UIDragablePanel.cs" />
@@ -56,6 +50,7 @@
     <Compile Include="UIElements\UIImageListButton.cs" />
     <Compile Include="UIElements\UIItemSlot.cs" />
     <Compile Include="UIElements\UIModState.cs" />
+    <Compile Include="UIElements\UISplitterPanel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
